# plate_recognize

./: CMakeLists.txt  readme.md
src/: yolov8_pose_img.cpp
src/draw/: cv_draw.cpp  cv_draw.h
src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/task/: plate_recognizer.cpp  plate_recognizer.h  yolov8_custom.cpp  yolov8_custom.h
src/types/: nn_datatype.h
weights/: PlateRec_CTC.rknn
